# OpenUpgrade

./: .bzrignore  .copier-answers.yml  .coveragerc  .gitignore  .old-travis.yml  .pre-commit-config.yaml  .prettierignore  .project  .project.moved  .pydevproject  .pylintrc  .pylintrc-mandatory  .travis.yml  Addons.xcu  Changelog  Expression.py  Expression_by_Script.py  Makefile  README  README.md  README.rst  Readme.txt  TODO  __init__.py  __terp__.py  build_openupgrade_docs  bzr_log.QO9iSk  crm_building  crossovered_budget_view.xml  magento.py  magento_data.xml  magento_view.xml  magento_wizard.xml  odoo-server.conf  patchlog  portal_analytic_package  profile_ampco  requirements.txt  server_modules.list  setup.py  (+4 more)
Ampco/: __init__.py  __terp__.py  ampco.py  ampco_view.xml
Commission_Pricelist/: __init__.py  commission_view.xml  saleagent.py  saleagent_demo.xml  saleagent_report.xml  saleagent_view.xml
Commission_Rate/: commission.py  commission_view.xml  saleagent_demo.xml
Tiny Report/: Addons.xcu  Expression_by_Script.py  Fields.py  Fields_by_script.py  Readme.txt  Repeatln.py  Repeatln_by_script.py  TinyERP_Report.py
Translation/: __init__.py  __terp__.py  translation.py  translation_server.py  translation_view.xml  translation_wizard.xml  translation_workflow.xml
account/: account.py  account_analytic_line.py  account_invoice.py  account_invoice_view.xml  account_move_line.py  account_view.xml  invoice.py  res_config.py  sequence.py
account_4_2_l10n_ch/: __init__.py  __terp__.py  partner.py  (+5 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+15320 files in other folders)
