[project]
name = "odoo-addons-oca-OpenUpgrade"
version = "17.0.20240523.0"
dependencies = [
    "odoo-addon-openupgrade_framework>=17.0dev,<17.1dev",
    "odoo-addon-openupgrade_scripts>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
